Assorted OAuth fixes
